2006-01-14 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c: set smsc_running = 0 in smsc2_cleanup insetad in
      router thread because so we never call smsc2_cleanup.
    * gwlib/cfg.c: fixed memleak. we should consider moving hooks to Cfg struct.

2007-01-11  Stipe Tolj  <stolj at kannel.org>
    * gwlib/cfg.def: adds config directive 'dlr-url' to smsc group to allow
      DLR bridging via HTTP SMSC type 'kannel' connections.
    * gw/smsc/smsc_http.c: adding generic DLR handling for type 'kannel',
      which allows point-to-point DLR forwarding though the whole kannel 
      instance chain. Uses 'dlr-url' to identify the DLR inbound port to the
      next kannel instance in chain.
      
2007-01-09  Stipe Tolj  <stolj at kannel.org>
    * test/decode_emimsg.c: adding a simple tool that decodes a EMI/UCP stream
      PDU and prints more readable informations about it. Thanks to Vincent.
      [Msg-Id: <1ad701c6e08d$88bee420$9600a8c0@vince>]
    
2007-01-08  Stipe Tolj  <stolj at kannel.org>
    * gwlib/mime.c: fixing segfault in MIME multipart parsing. Thanks to Paul
      for providing the patch, and Vincent and Martin for review.
      [Msg-Id: <D19E3735-BE32-4934-987A-B9D6A3BA31CB@dsmagic.com>]
      
2007-01-08  Stipe Tolj  <stolj at kannel.org>
    * */*: update LICENSE preamble block to 2007.

2007-01-08  Stipe Tolj  <stolj at kannel.org>
    * gwlib/charset.c: removing Alex's debugging octstr_dump() calls from 
      charset_utf8_to_gsm(). NLC.
    
2007-01-08  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_fake.c: enhancing the faked DLR support. Now we pass the ACK
      of the MT first to abstraction layer, in order to obtain SMSC success DLR,
      then care about the final DLR indicating success.

2007-01-08  Stipe Tolj  <stolj at kannel.org>
	* gw/dlr.h: fixing typo for DLR_SMSC_FAIL macro, obviously this is 0x16.

2007-01-07  Stipe Tolj  <stolj at kannel.org>